--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alam sejahtera</title>
+    <link rel="website icon" type="jpeg"
+    href="img/images.jpg">
     <link rel="stylesheet" href="css/alamdaonew.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -23,7 +25,7 @@
     <div class="body">
         <img src="img/new.jpeg" alt="sampul" width="100%" height="800px">
         <h2>We are a good community</h2>
-        <p>Kami mengucapkan <b>"Kontol"</b>untul di segala situasi</p>
+        <p>Kami mengucapkan <b>"Alhamdulillah"</b>untul di segala situasi</p>
     </div>
     <div class="aboutus" id="galery">
         <div class="us">
