--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="body">
         <img src="img/new.jpeg" alt="sampul" width="100%" height="800px">
         <h2>We are a good community</h2>
-        <p>Kami mengucapkan <b>"Alhamdulillah"</b>untul di segala situasi</p>
+        <p>Kami mengucapkan <b>"Alhamdulillah"</b>untuk di segala situasi</p>
     </div>
     <div class="aboutus" id="galery">
         <div class="us">
@@ -260,7 +260,7 @@
                 <img src="img/ii.jpeg" alt="foto rizki">
             <span>
                 <h3>Rizki ramadhan</h3>
-                <p>"Hiduplah seperti kontol"</p>
+                <p>"Hiduplah seperti manusia yang bijak"</p>
                 <a href="https://instagram.com/_rmdrzky" class="fa fa-instagram"></a>
                 <a href="" class="fa fa-whatsapp"></a>
             </span>
@@ -357,9 +357,9 @@
         <p>	&#169 Ferdiyansyah putra dwi sofyan</p>
         <p>	&#169 Cirebon 26 Mei 2023</p>
         <div class="sosialmedia">
-            <a href="" class="fa fa-instagram"></a>
-            <a href="" class="fa fa-twitter"></a>
-            <a href="" class="fa fa-whatsapp"></a>
+            <a href="https://instagram.com/sayhelllooooooooo" class="fa fa-instagram"></a>
+            <a href="https://twitter.com/BrainFredly" class="fa fa-twitter"></a>
+            <a href="https://wa.me/083867519147" class="fa fa-whatsapp"></a>
         </div>
         <div class="support">
             <p>Thanks for support and for help me</p>
