--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="bio">
         <div class="overlay" id="ferdi">
             <div class="ferdiyansyah" >
-                <img src="img/ppp.jpeg" alt="foto ferdi">
+                <img src="img/ferdi.jpg" alt="foto ferdi">
             <span>
                 <h3>Ferdiyansyah putra dwi sofyan</h3>
                 <p>"Tak perlu sekolah yang penting kerja keras"</p>
