--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <img src="img/ferdi.jpg" alt="foto ferdi">
             <span>
                 <h3>Ferdiyansyah putra dwi sofyan</h3>
-                <p>"Tak perlu sekolah yang penting kerja keras"</p>
+                <p>"Tak ada batasan untuk terus berusaha"</p>
                 <a href="https://instagram.com/sayhelllooooooooo" class="fa fa-instagram"></a>
                 <a href="" class="fa fa-whatsapp"></a>
             </span>
