--- a/index.html
+++ b/index.html
@@ -351,6 +351,18 @@
             <a href="#about" class="close2">X</a>
             </div>
         </div>
+         <div class="overlay" id="fadil">
+            <div class="ferdiyansyah" >
+                <img src="img/fadil.jpeg" alt="foto fadil">
+            <span>
+                <h3>Fadil</h3>
+                <p>"Makan makan dan makan"</p>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="" class="fa fa-whatsapp"></a>
+            </span>
+            <a href="#about" class="close2">X</a>
+            </div>
+        </div>
         <div class="clear"></div>
     </div>
     <footer>
