--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <li><a href="">Sigit</a></li>
             <li><a href="">Fayad</a> </li>
             <li><a href="#mbe">Abdul kholid</a></li>
-            <li><a href="">Fadil</a></li>
+            <li><a href="#fadil">Fadil</a></li>
         </ul>
         <div class="member"></div>
     </div>
