--- a/index.html
+++ b/index.html
@@ -358,7 +358,18 @@
                 <h3>Fadil</h3>
                 <p>"Makan makan dan makan"</p>
                 <a href="#" class="fa fa-instagram"></a>
-                <a href="" class="fa fa-whatsapp"></a>
+                <a href="#" class="fa fa-whatsapp"></a>
+            </span>
+            <a href="#about" class="close2">X</a>
+            </div>
+        </div>
+         <div class="ferdiyansyah" >
+                <img src="img/endrik.jpeg" alt="foto rohendrik">
+            <span>
+                <h3>Rohendrik putra amanda</h3>
+                <p>"hidup ga perlu motivasi² tai anj"</p>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-whatsapp"></a>
             </span>
             <a href="#about" class="close2">X</a>
             </div>
