--- a/index.html
+++ b/index.html
@@ -363,8 +363,9 @@
             <a href="#about" class="close2">X</a>
             </div>
         </div>
-         <div class="ferdiyansyah" >
-                <img src="img/endrik.jpeg" alt="foto rohendrik">
+                 <div class="overlay" id="etol">
+            <div class="ferdiyansyah" >
+                <img src="img/endrik.jpeg" alt="foto rohendik">
             <span>
                 <h3>Rohendrik putra amanda</h3>
                 <p>"hidup ga perlu motivasi² tai anj"</p>
