--- a/index.html
+++ b/index.html
@@ -375,6 +375,18 @@
             <a href="#about" class="close2">X</a>
             </div>
         </div>
+             <div class="overlay" id="vanky">
+            <div class="ferdiyansyah" >
+                <img src="img/vanky.jpeg" alt="foto De vanky">
+            <span>
+                <h3>De Vanky</h3>
+                <p>"Diam tak bergerak, bergerak tak diam"</p>
+                <a href="https://www.instagram.com/vanky24_" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-whatsapp"></a>
+            </span>
+            <a href="#about" class="close2">X</a>
+            </div>
+        </div>
         <div class="clear"></div>
     </div>
     <footer>
